# meetups

./: README.md  archive.json  pyproject.toml  requirements.txt  sessions.json
app/: __init__.py  services.py
app/models/: __init__.py  events.py  talk_resources.py  talk_speakers.py  talks.py  workshop_hosts.py  workshop_resources.py  workshops.py
app/static/: style.css
app/templates/: event-create.html  event.html  index.html  talk-create.html  talk.html  workshop-create.html  workshop.html
app/templates/includes/: head.html  xdata-event-create.html  xdata-event.html  xdata-index.html  xdata-talk-create.html  xdata-talk.html  xdata-workshop-create.html  xdata-workshop.html
instance/: main.db
organisation/: Session_format_ideas.md  Topics_ideas.md
